# Copyright 2025 Erik Wällstedt
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "gks-xml-derive"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["gkhk <gkhk.zu@gmail.com>"]
description = "Derive macros for gks-xml"
repository = "https://github.com/gkhk0/gks-xml"

[lib]
name = "gks_xml_derive"
proc-macro = true

[dependencies]
